--- a/index.html
+++ b/index.html
@@ -12,6 +12,71 @@
 <body>
 
 
+  <div class="container">
+
+
+    <ul class="movies-list">
+
+<li class="movies-item">
+
+<img class="movie-cover" src="img/justice-league.jpg" width="648"  height="1000" alt="Juctice league page" >
+
+
+<div class="movies-item-infos">
+
+  <h3 class="movies-info-heading">
+    justice league
+  </h3>
+
+  <p class="movies-definition">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p> 
+
+<p class="movie_new-price">
+  $<span id="newPrice" class="price-changeble">28.00</span>
+</p>
+
+<p class="movie_old-price">
+  $<span id="oldPrice" class="price-change">44.99</span>
+</p>
+
+
+<a href="/" class="buy-link">buy now</a>
+
+</div>
+
+</li>
+
+<li class="movies-item">
+
+  <img class="movie-cover" src="img/blade-runner.jpg" width="648"  height="1000" alt="blade runner page" >
+  
+  
+  <div class="movies-item-infos">
+  
+    <h3 class="movies-info-heading">
+      blade runner
+    </h3>
+  
+    <p class="movies-definition">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p> 
+  
+  <p class="movie_new-price">
+    $<span id="newPrice" class="price-changeble">20.75</span>
+  </p>
+  
+  <p class="movie_old-price">
+    $<span id="oldPrice" class="price-change">40.99</span>
+  </p>
+  
+  
+  <a href="/" class="buy-link">buy now</a>
+  
+  </div>
+  
+  </li>
+    </ul>
+
+
+  </div>
+
   <script src="main.js"></script>
 </body>
 </html>
